# 9puzzle

./: 9.py  LICENSE  README.md  pyproject.toml  requirements.txt
puzzle9/: main.py  puzzle.txt  sliding_puzzle9.py
puzzle9/tests/: chk_input.py
puzzle9/utils/: all_states.py  readchar_remapped.py  readcharremapped.py  readpuzz.py
utils/: clear.py  getch.py
